workspace 添加网络别名

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -141,8 +141,12 @@ services:
         - DOCKER_TLS_CERTDIR=/certs
         - DOCKER_CERT_PATH=/certs/client
       networks:
-        - frontend
-        - backend
+        frontend:
+          aliases:
+            - workspace
+        backend:
+          aliases:
+            - workspace
       links:
         - docker-in-docker
 
