--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -532,7 +532,8 @@ ARG INSTALL_PHPREDIS=false
 
 RUN if [ ${INSTALL_PHPREDIS} = true ]; then \
     apt-get update -yqq && \
-    apt-get install -yqq php-redis \
+    apt-get install -yqq php-redis && \
+    docker-php-ext-enable redis \
 ;fi
 
 ###########################################################################
