--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -705,7 +705,7 @@ ENV NVM_NODEJS_ORG_MIRROR ${NVM_NODEJS_ORG_MIRROR}
 RUN if [ ${INSTALL_NODE} = true ]; then \
     # Install nvm (A Node Version Manager)
     mkdir -p $NVM_DIR && \
-    wget https://raw.staticdn.net/creationix/nvm/v0.33.11/install.sh && \
+    RUN wget https://raw.staticdn.net/creationix/nvm/v0.33.11/install.sh && \
     RUN sed -i 's/raw.githubusercontent.com/raw.staticdn.net/' install.sh && \
     bash install.sh \
         && . $NVM_DIR/nvm.sh \
