--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -702,14 +702,9 @@ ENV NVM_DIR /home/laradock/.nvm
 ARG NVM_NODEJS_ORG_MIRROR
 ENV NVM_NODEJS_ORG_MIRROR ${NVM_NODEJS_ORG_MIRROR}
 
-USER root
-
 RUN apt-get install wget && \
     wget -P /home/laradock/ https://raw.sevencdn.com/creationix/nvm/v0.37.2/install.sh  && \
-    sed -i 's/raw.githubusercontent.com/raw.sevencdn.com/' /home/laradock/install.sh && \
-    chown laradock:laradock /home/laradock/install.sh
-
-USER laradock
+    sed -i 's/raw.githubusercontent.com/raw.sevencdn.com/' /home/laradock/install.sh
 
 RUN if [ ${INSTALL_NODE} = true ]; then \
     # Install nvm (A Node Version Manager)
