--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -532,7 +532,10 @@ ARG INSTALL_PHPREDIS=false
 
 RUN if [ ${INSTALL_PHPREDIS} = true ]; then \
     apt-get update -yqq && \
-    apt-get install -yqq php-redis \
+    apt-get install -yqq php-redis &&\
+    echo "extension=redis.so" >> /etc/php/${LARADOCK_PHP_VERSION}/mods-available/redis.ini && \
+    ln -s /etc/php/${LARADOCK_PHP_VERSION}/mods-available/redis.ini /etc/php/${LARADOCK_PHP_VERSION}/cli/conf.d/20-redis.ini \
+    && php -m | grep -q 'redis' \
 ;fi
 
 ###########################################################################
