--- a/.env.example
+++ b/.env.example
@@ -73,7 +73,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 ### Environment ###########################################
 
 # If you need to change the sources (i.e. to China), set CHANGE_SOURCE to true
-CHANGE_SOURCE=false
+CHANGE_SOURCE=true
 # Set ORACLE INSTANT_CLIENT_MIRROR option if you want to use Intranet improve download, you can download files first
 ORACLE_INSTANT_CLIENT_MIRROR=https://raw.githubusercontents.com/diogomascarenha/oracle-instantclient/master/
 
@@ -122,7 +122,7 @@ WORKSPACE_INSTALL_SUBVERSION=false
 WORKSPACE_INSTALL_BZ2=false
 WORKSPACE_INSTALL_GMP=false
 WORKSPACE_INSTALL_GNUPG=false
-WORKSPACE_INSTALL_XDEBUG=false
+WORKSPACE_INSTALL_XDEBUG=true
 WORKSPACE_INSTALL_PCOV=false
 WORKSPACE_INSTALL_PHPDBG=false
 WORKSPACE_INSTALL_SSH2=false
@@ -168,7 +168,7 @@ WORKSPACE_INSTALL_TAINT=false
 WORKSPACE_INSTALL_LIBPNG=false
 WORKSPACE_INSTALL_GRAPHVIZ=false
 WORKSPACE_INSTALL_IONCUBE=false # PHP 8.0 is not supported yet. Reference: https://forum.ioncube.com/viewtopic.php?t=4592
-WORKSPACE_INSTALL_MYSQL_CLIENT=false
+WORKSPACE_INSTALL_MYSQL_CLIENT=true
 WORKSPACE_INSTALL_PING=false
 WORKSPACE_INSTALL_SSHPASS=false
 WORKSPACE_INSTALL_INOTIFY=false
@@ -220,7 +220,7 @@ PHP_FPM_INSTALL_BZ2=false
 PHP_FPM_INSTALL_ENCHANT=false
 PHP_FPM_INSTALL_GMP=false
 PHP_FPM_INSTALL_GNUPG=false
-PHP_FPM_INSTALL_XDEBUG=false
+PHP_FPM_INSTALL_XDEBUG=true
 PHP_FPM_INSTALL_PCOV=false
 PHP_FPM_INSTALL_XHPROF=false
 PHP_FPM_INSTALL_PHPDBG=false
@@ -296,14 +296,14 @@ PHP_WORKER_INSTALL_GNUPG=false
 PHP_WORKER_INSTALL_LDAP=false
 PHP_WORKER_INSTALL_PGSQL=false
 PHP_WORKER_INSTALL_MONGO=false
-PHP_WORKER_INSTALL_BCMATH=false
+PHP_WORKER_INSTALL_BCMATH=true
 PHP_WORKER_INSTALL_MEMCACHED=false
 # PHP_WORKER_INSTALL_OCI8 Does not work in php5.6 version
 PHP_WORKER_INSTALL_OCI8=false
 PHP_WORKER_INSTALL_MSSQL=false
 PHP_WORKER_INSTALL_PHALCON=false
 PHP_WORKER_INSTALL_SOAP=false
-PHP_WORKER_INSTALL_ZIP_ARCHIVE=false
+PHP_WORKER_INSTALL_ZIP_ARCHIVE=true
 PHP_WORKER_INSTALL_MYSQL_CLIENT=false
 PHP_WORKER_INSTALL_AMQP=false
 PHP_WORKER_INSTALL_GHOSTSCRIPT=false
