增加多个php-fpm版本

--- a/php-fpm/xdebug.ini
+++ b/php-fpm/xdebug.ini
@@ -1,15 +1,15 @@
 ; NOTE: The actual debug.so extention is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
 
 xdebug.remote_host="host.docker.internal"
-xdebug.remote_connect_back=1
-xdebug.remote_port=9003
+xdebug.discover_client_host=true
+xdebug.client_port=9003
 xdebug.idekey=VSCODE
 
-xdebug.remote_autostart=1
-xdebug.remote_enable=1
+xdebug.start_with_request=yes
+xdebug.mode=debug
 xdebug.cli_color=1
-xdebug.profiler_enable=1
-xdebug.profiler_output_dir="~/xdebug/vscode/tmp/profiling"
+xdebug.mode=profile
+xdebug.output_dir ="/tmp"
 
 xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
