--- a/.env.example
+++ b/.env.example
@@ -76,9 +76,9 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 ### Environment ###########################################
 
 # If you need to change the sources (i.e. to China), set CHANGE_SOURCE to true
-CHANGE_SOURCE=false
+CHANGE_SOURCE=true
 # Set ORACLE INSTANT_CLIENT_MIRROR option if you want to use Intranet improve download, you can download files first
-ORACLE_INSTANT_CLIENT_MIRROR=https://github.com/the-paulus/oracle-instantclient/raw/master/
+ORACLE_INSTANT_CLIENT_MIRROR=https://raw.githubusercontents.com/diogomascarenha/oracle-instantclient/master/
 ORACLE_INSTANT_CLIENT_ARCH=x86_64
 ORACLE_INSTANT_CLIENT_MAJOR=18
 ORACLE_INSTANT_CLIENT_MINOR=3
@@ -105,18 +105,18 @@ SHELL_OH_MY_ZSH_ALIASES=false
 WORKSPACE_BASE_IMAGE_TAG_PREFIX=latest
 WORKSPACE_COMPOSER_GLOBAL_INSTALL=true
 WORKSPACE_COMPOSER_VERSION=2
-WORKSPACE_COMPOSER_AUTH_JSON=false
-WORKSPACE_COMPOSER_REPO_PACKAGIST=
-WORKSPACE_NVM_NODEJS_ORG_MIRROR=
+WORKSPACE_COMPOSER_AUTH=false
+WORKSPACE_COMPOSER_REPO_PACKAGIST=https://mirrors.aliyun.com/composer/
+WORKSPACE_NVM_NODEJS_ORG_MIRROR=https://npm.taobao.org/mirrors/node
 WORKSPACE_INSTALL_NODE=true
 WORKSPACE_NODE_VERSION=node
-WORKSPACE_NPM_REGISTRY=
+WORKSPACE_NPM_REGISTRY==https://registry.npm.taobao.org
 WORKSPACE_NPM_FETCH_RETRIES=2
 WORKSPACE_NPM_FETCH_RETRY_FACTOR=10
 WORKSPACE_NPM_FETCH_RETRY_MINTIMEOUT=10000
 WORKSPACE_NPM_FETCH_RETRY_MAXTIMEOUT=60000
 WORKSPACE_INSTALL_PNPM=false
-WORKSPACE_INSTALL_YARN=true
+WORKSPACE_INSTALL_YARN=false
 WORKSPACE_YARN_VERSION=latest
 WORKSPACE_INSTALL_NPM_GULP=true
 WORKSPACE_INSTALL_NPM_BOWER=false
@@ -128,7 +128,7 @@ WORKSPACE_INSTALL_SUBVERSION=false
 WORKSPACE_INSTALL_BZ2=false
 WORKSPACE_INSTALL_GMP=false
 WORKSPACE_INSTALL_GNUPG=false
-WORKSPACE_INSTALL_XDEBUG=false
+WORKSPACE_INSTALL_XDEBUG=true
 WORKSPACE_INSTALL_PCOV=false
 WORKSPACE_INSTALL_PHPDBG=false
 WORKSPACE_INSTALL_SSH2=false
@@ -169,12 +169,12 @@ WORKSPACE_INSTALL_TERRAFORM=false
 WORKSPACE_INSTALL_DUSK_DEPS=false
 WORKSPACE_INSTALL_PG_CLIENT=false
 WORKSPACE_INSTALL_PHALCON=false
-WORKSPACE_INSTALL_SWOOLE=false
+WORKSPACE_INSTALL_SWOOLE=true
 WORKSPACE_INSTALL_TAINT=false
 WORKSPACE_INSTALL_LIBPNG=false
 WORKSPACE_INSTALL_GRAPHVIZ=false
 WORKSPACE_INSTALL_IONCUBE=false # PHP 8.0 is not supported yet. Reference: https://forum.ioncube.com/viewtopic.php?t=4592
-WORKSPACE_INSTALL_MYSQL_CLIENT=false
+WORKSPACE_INSTALL_MYSQL_CLIENT=true
 WORKSPACE_INSTALL_PING=false
 WORKSPACE_INSTALL_SSHPASS=false
 WORKSPACE_INSTALL_INOTIFY=false
@@ -231,7 +231,7 @@ PHP_FPM_INSTALL_BZ2=false
 PHP_FPM_INSTALL_ENCHANT=false
 PHP_FPM_INSTALL_GMP=false
 PHP_FPM_INSTALL_GNUPG=false
-PHP_FPM_INSTALL_XDEBUG=false
+PHP_FPM_INSTALL_XDEBUG=true
 PHP_FPM_INSTALL_PCOV=false
 PHP_FPM_INSTALL_XHPROF=false
 PHP_FPM_INSTALL_PHPDBG=false
@@ -253,7 +253,7 @@ PHP_FPM_INSTALL_PGSQL=false
 PHP_FPM_INSTALL_GHOSTSCRIPT=false
 PHP_FPM_INSTALL_LDAP=false
 PHP_FPM_INSTALL_PHALCON=false
-PHP_FPM_INSTALL_SWOOLE=false
+PHP_FPM_INSTALL_SWOOLE=true
 PHP_FPM_INSTALL_TAINT=false
 PHP_FPM_INSTALL_PG_CLIENT=false
 PHP_FPM_INSTALL_POSTGIS=false
@@ -310,24 +310,24 @@ PHP_WORKER_INSTALL_GNUPG=false
 PHP_WORKER_INSTALL_LDAP=false
 PHP_WORKER_INSTALL_PGSQL=false
 PHP_WORKER_INSTALL_MONGO=false
-PHP_WORKER_INSTALL_BCMATH=false
+PHP_WORKER_INSTALL_BCMATH=true
 PHP_WORKER_INSTALL_MEMCACHED=false
 # PHP_WORKER_INSTALL_OCI8 Does not work in php5.6 version
 PHP_WORKER_INSTALL_OCI8=false
 PHP_WORKER_INSTALL_MSSQL=false
 PHP_WORKER_INSTALL_PHALCON=false
 PHP_WORKER_INSTALL_SOAP=false
-PHP_WORKER_INSTALL_ZIP_ARCHIVE=false
+PHP_WORKER_INSTALL_ZIP_ARCHIVE=true
 PHP_WORKER_INSTALL_MYSQL_CLIENT=false
 PHP_WORKER_INSTALL_AMQP=false
 PHP_WORKER_INSTALL_GHOSTSCRIPT=false
-PHP_WORKER_INSTALL_SWOOLE=false
+PHP_WORKER_INSTALL_SWOOLE=true
 PHP_WORKER_INSTALL_TAINT=false
 PHP_WORKER_INSTALL_FFMPEG=false
 PHP_WORKER_INSTALL_AUDIOWAVEFORM=false
 PHP_WORKER_INSTALL_CASSANDRA=false
 PHP_WORKER_INSTALL_GEARMAN=false
-PHP_WORKER_INSTALL_REDIS=false
+PHP_WORKER_INSTALL_REDIS=true
 PHP_WORKER_INSTALL_IMAP=false
 PHP_WORKER_INSTALL_XMLRPC=false
 PHP_WORKER_INSTALL_SSDB=false
@@ -369,7 +369,7 @@ LARAVEL_HORIZON_IMAGEMAGICK_VERSION=latest
 LARAVEL_HORIZON_INSTALL_SOCKETS=false
 LARAVEL_HORIZON_INSTALL_YAML=false
 LARAVEL_HORIZON_INSTALL_ZIP_ARCHIVE=false
-LARAVEL_HORIZON_INSTALL_PHPREDIS=false
+LARAVEL_HORIZON_INSTALL_PHPREDIS=true
 LARAVEL_HORIZON_INSTALL_MONGO=false
 LARAVEL_HORIZON_INSTALL_CASSANDRA=false
 LARAVEL_HORIZON_INSTALL_FFMPEG=false
