--- a/workspace/xdebug.ini
+++ b/workspace/xdebug.ini
@@ -1,15 +1,15 @@
 ; NOTE: The actual debug.so extention is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
 
 xdebug.remote_host="host.docker.internal"
-xdebug.remote_connect_back=0
-xdebug.remote_port=9000
-xdebug.idekey=PHPSTORM
+xdebug.discover_client_host=true
+xdebug.client_port=9003
+xdebug.idekey=VSCODE
 
-xdebug.remote_autostart=0
-xdebug.remote_enable=0
-xdebug.cli_color=0
-xdebug.profiler_enable=0
-xdebug.profiler_output_dir="~/xdebug/phpstorm/tmp/profiling"
+xdebug.start_with_request=yes
+xdebug.mode=debug
+xdebug.cli_color=1
+xdebug.mode=profile
+xdebug.output_dir ="/tmp"
 
 xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
