--- a/.env.example
+++ b/.env.example
@@ -78,7 +78,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 # If you need to change the sources (i.e. to China), set CHANGE_SOURCE to true
 CHANGE_SOURCE=true
 # Set ORACLE INSTANT_CLIENT_MIRROR option if you want to use Intranet improve download, you can download files first
-ORACLE_INSTANT_CLIENT_MIRROR=https://raw.githubusercontents.com/diogomascarenha/oracle-instantclient/master/
+ORACLE_INSTANT_CLIENT_MIRROR=https://raw.gitmirror.com/diogomascarenha/oracle-instantclient/master/
 ORACLE_INSTANT_CLIENT_ARCH=x86_64
 ORACLE_INSTANT_CLIENT_MAJOR=18
 ORACLE_INSTANT_CLIENT_MINOR=3
@@ -110,7 +110,7 @@ WORKSPACE_COMPOSER_REPO_PACKAGIST=https://mirrors.aliyun.com/composer/
 WORKSPACE_NVM_NODEJS_ORG_MIRROR=https://npm.taobao.org/mirrors/node
 WORKSPACE_INSTALL_NODE=true
 WORKSPACE_NODE_VERSION=node
-WORKSPACE_NPM_REGISTRY==https://registry.npm.taobao.org
+WORKSPACE_NPM_REGISTRY=https://registry.npm.taobao.org
 WORKSPACE_NPM_FETCH_RETRIES=2
 WORKSPACE_NPM_FETCH_RETRY_FACTOR=10
 WORKSPACE_NPM_FETCH_RETRY_MINTIMEOUT=10000
