去掉 github 镜像加速

--- a/.env.example
+++ b/.env.example
@@ -83,7 +83,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 # If you need to change the sources (i.e. to China), set CHANGE_SOURCE to true
 CHANGE_SOURCE=true
 # Set ORACLE INSTANT_CLIENT_MIRROR option if you want to use Intranet improve download, you can download files first
-ORACLE_INSTANT_CLIENT_MIRROR=https://raw.gitmirror.com/diogomascarenha/oracle-instantclient/master/
+ORACLE_INSTANT_CLIENT_MIRROR=https://raw.githubusercontent.com/diogomascarenha/oracle-instantclient/master/
 ORACLE_INSTANT_CLIENT_ARCH=x86_64
 ORACLE_INSTANT_CLIENT_MAJOR=18
 ORACLE_INSTANT_CLIENT_MINOR=3
